# project-chimera

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  README.md  Readme.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: main.yml
research/: architecture_strategy.md  research_notes.md  tooling_strategy.md
skills/: README.md
skills/skill_content_generator/: README.md
skills/skill_fetch_trends/: README.md
skills/skill_generate_image/: README.md
skills/skill_post_content/: README.md
skills/skill_social_publisher/: README.md
skills/skill_trend_fetcher/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_placeholder.py  test_skills_interface.py  test_trend_fetcher.py
