[project]
name = "project-chimera"
version = "0.1.0"
description = "Spec-driven agentic infrastructure for autonomous AI influencers."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
	"fastapi",
	"pydantic>=2.0",
	"pytest>=9.0.2",
	"redis",
]

[project.optional-dependencies]
dev = [
	"pytest",
	"ruff",
	"black",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.0",
]
